[package]
name = "turbulent-ci"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
